# openai-rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/openai/: api_type.rs  auth.rs  client.rs  error.rs  mod.rs  requestor.rs
src/openai/chat/: chat_completion.rs  chat_message.rs  error.rs  function_call.rs  mod.rs
src/openai/chat/model/: chat_completion_response.rs  chat_message.rs  choice.rs  function_call.rs  function_definition.rs  mod.rs  role.rs  usage.rs
