[package]
name = "openai-rust"
version = "0.0.1"
authors = ["pmalarme@gmail.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/openai-rs/openai-api"
description = "A very simple Rust library for OpenAI API, free from complex async operations and redundant dependencies."
keywords = ["openai_api", "openai", "openai-api"]
categories = ["api-bindings"]

[dependencies]
openssl-sys = "0.9.93"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
wiremock = "0.5"
serde = "1"
serde_json = "1"
